--- a/build.gradle
+++ b/build.gradle
@@ -186,7 +186,7 @@ dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     compileOnly("org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT")
     compileOnly fileTree(dir: 'libs', include: ['*.jar'])
- //   implementation 'com.mohistmc:mohistdev:1.20.1'
+    implementation 'com.mohistmc:mohistdev:1.20.1'
 
 }
 
