--- a/gradle.properties
+++ b/gradle.properties
@@ -38,7 +38,7 @@ mod_name=IridiumSkyblockForgeTweaks
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.6-SNAPSHOT
+mod_version=2.1-SNAPSHOT
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -47,3 +47,8 @@ mod_group_id=org.windy
 mod_authors=
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=
+create_minecraft_version = 1.20.1
+flywheel_minecraft_version = 1.20.1
+create_version = 0.5.1.j-55
+flywheel_version = 0.6.11-13
+registrate_version = MC1.20-1.3.3
