--- a/build.gradle
+++ b/build.gradle
@@ -157,6 +157,10 @@ repositories {
         url = "https://oss.sonatype.org/content/groups/public/"
     }
     maven {url "https://maven.mohistmc.com/"}
+    maven {
+        name = 'tterrag maven'
+        url = 'https://maven.tterrag.com/'
+    }
 
 }
 
